--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                 <h3>Anna - site e-commerce <i class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i
                         class="fab fa-bootstrap"></i></h3>
             </div>
-            <h3>TodoGether - web app todolist <i class="fab fa-symfony"></i></h3>
-            <h3>Airbean - Site logement type air-bnb <i class="fab fa-symfony"></i></h3>
+            <h3>TodoGether - web app todolist <i class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i
+                class="fab fa-bootstrap"></i></h3>
+            <h3>Airbean - Site logement type air-bnb <i class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i
+                class="fab fa-bootstrap"></i></h3>
         </div>
         <div>
             <h1>Mes travaux</h1>
