--- a/index.html
+++ b/index.html
@@ -39,36 +39,62 @@
     </header>
     <main>
         <div>
-            <h1>Mes travaux persos</h1>
+            <h1>Projets Persos</h1>
             <div>
-                <h3>Anna - site e-commerce <i class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i
-                        class="fab fa-bootstrap"></i></h3>
+                <h3><a href="https://wnaythzwvq-bemh5cfa4d2bc.eu.s5y.io/">Anna</a> - site e-commerce <i
+                        class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i class="fab fa-bootstrap"></i>
+                </h3>
+                <div style="margin-left:2em">
+                    Site e-commerce rassemblant mes conaissances sur Symfony en utilisants différents bundles.
+                    <a href="">Détails</a>
+                </div>
             </div>
             <h3>TodoGether - web app todolist <i class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i
-                class="fab fa-bootstrap"></i></h3>
-            <h3>Airbean - Site logement type air-bnb <i class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i
-                class="fab fa-bootstrap"></i></h3>
+                    class="fab fa-bootstrap"></i></h3>
+
+            <div style="margin-left:2em">
+                Développé en 3 jours, je l'ai crée surtout pour découvrir le bundle softdelete.
+                <a href="TodoGether.html#project-title">Détails</a>
+            </div>
+            <h3>Airbean - Site pour louer des biens <i class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i
+                    class="fab fa-bootstrap"></i></h3>
+            <div style="margin-left:2em">
+                Développé en 3 jours, je l'ai crée surtout pour découvrir le bundle softdelete.
+                <a href="">Détails</a>
+            </div>
+
+            <h3>Et plein d'autres projets que vous pouvez retrouver <a
+                    href="https://github.com/pascalyu?tab=repositories">ici</a></h3>
         </div>
         <div>
-            <h1>Mes travaux</h1>
+            <h1>Chez Neofly</h1>
             <div>
-                <h3><a target="__blanck" href="https://www.toplook.com/">Toplook</a> - site e-commerce pour grossiste <i class="fab fa-php"></i> <i class="fab fa-js-square"></i>
+                <h3><a href="TopLook.html">Toplook</a> - site e-commerce pour grossiste <i class="fab fa-php"></i> <i
+                        class="fab fa-js-square"></i>
                     <i class="fab fa-bootstrap"></i>
                 </h3>
+                <div style="margin-left:2em">J’ai contribué à développer certaines fonctionnalités au niveau du back
+                    office et site client
+
+                    <div><a href="TopLook.html">détails</a></div>
+                </div>
+
                 <!--div>
                     <img style="width: auto; height:189px;border: solid;" src="images/toplook.PNG" />
                     <img style="width: 10%;" src="images/toplookmobile.PNG" />
                 <div-->
             </div>
             <div>
-                <h3><a target="__blanck" href="https://www.monsieurbureau.com/">MonsierBureau</a> - site e-commerce de commodes <i
-                        class="fab fa-php"></i> <i class="fab fa-js-square"></i>
+                <h3><a target="__blanck" href="MonsieurBureau.html">MonsierBureau</a> - site e-commerce de
+                    commodes <i class="fab fa-php"></i> <i class="fab fa-js-square"></i>
                     <i class="fab fa-bootstrap"></i>
                 </h3>
+                <div style="margin-left:2em">J'ai contribué à développer la gestion de devis
+                    <div><a href="MonsieurBureau.html">détails</a></div>
+                </div>
                 <!--div>
                     <img style="width: auto; height:189px;border: solid;" src="images/monsieurbureau2.PNG" />
                  </div-->
-
             </div>
         </div>
     </main>
