--- a/Airbean.html
+++ b/Airbean.html
@@ -42,29 +42,35 @@
         <h1>
             Air bean
         </h1>
-        <h2> Site pour louer des biens <a target="__blanck"
-                href="https://www.monsieurbureau.com/">https://www.monsieurbureau.com/</a></h2>
+        <h2> Site pour louer des biens</h2>
         <div>
-            <img style="width: auto; height:400px" src="images/monsieurbureau2.PNG" />
+            <img style="width: auto; height:400px" src="images/airbean.PNG" />
         </div>
         <div class="some-margin-top-space">
-            Site fait en 1 semaine, le but étant de réfléchir à l'architecture du projet.
+            Site fait en 1 semaine, le but étant de réfléchir à l'architecture d'un projet et de découvrir les bundles à
+            savoir : VichUploaderBundle.
         </div>
-        <div>Ca m'a permis de travailler avec des technologies un peu plus vieux et faire beaucoup de Javascript natif
-        </div>
+        
 
         <hr />
         <div></div>
         <div>
-            <b>Gestion de devis</b>
+            <b>Fonctionnalités</b>
 
             <div>
                 <ul>
-                    <li>Possibilité de créer un devis en choisissant les produits existants</li>
-                    <li>Affichage dynamique de la partie devis : calcul , choix des produits</li>
-                    <li>Envoie automatique des mails</li>
-                    <li>Génération de devis PDF</li>
-                    <li>Rajout section devis pour le compte client où il pourra voir les devis qu'on lui a envoyé</li>
+                    <li>Affichage pays</li>
+                    <li>Affichage villes selon pays</li>
+                    <li>Affichage des biens selon ville</li>
+                    <li>CRUD pays</li>
+                    <li>CRUD villes</li>
+                    <li>CRUD biens</li>
+                    <li>Détail du bien , avec possibilité de choisir dates , et calcul du prix</li>
+                    <li>Récapitulatif des voyages</li>
+                    <li>Possibilité de host un bien </li>
+                    <li>Paramètre d'un compte</li>
+                    <li>Recherche par pays + autocomplétion (select2)</li>
+                    
                 </ul>
             </div>
         </div>
@@ -72,10 +78,11 @@
         <div>
             <b>Technologies utilisés</b>
             <ul>
-                <li>PHP 3</li>
+                <li>Symfony 5</li>
                 <li>MySQL</li>
-                <li>JavaScript</li>
-                <li>SVN</li>
+                <li>JQuery</li>
+                <li>Bootstrap</li>
+                <li>GIT</li>
             </ul>
         </div>
 </body>
