--- a/TodoGether.html
+++ b/TodoGether.html
@@ -75,6 +75,7 @@
             <ul>
                 <li>Symfony 5</li>
                 <li>MySQL</li>
+                <li>JQuery</li>
                 <li>Bootstrap</li>
                 <li>GIT</li>
             </ul>
