--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
     <main>
         <div>
             <h1>Projets Persos</h1>
+            <div>J'aime beaucoup apprendre, et créer des sites. Tous les jours  je passe du temps
+                à coder, à suivre des cours udemy, à tester des bundles. Voici quelques projets que j'ai
+                crée.
+
+            </div>
             <div>
-                <h3><a href="https://wnaythzwvq-bemh5cfa4d2bc.eu.s5y.io/">Anna</a> - site e-commerce <i
+                <h3><span href="https://wnaythzwvq-bemh5cfa4d2bc.eu.s5y.io/">Anna</span> - site e-commerce <i
                         class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i class="fab fa-bootstrap"></i>
                 </h3>
                 <div style="margin-left:2em">
                     Site e-commerce rassemblant mes conaissances sur Symfony en utilisants différents bundles.
-                    <a href="">Détails</a>
+                    <a href="Anna.html#project-title">Détails</a>
                 </div>
             </div>
             <h3>TodoGether - web app todolist <i class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i
@@ -59,8 +64,8 @@
             <h3>Airbean - Site pour louer des biens <i class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i
                     class="fab fa-bootstrap"></i></h3>
             <div style="margin-left:2em">
-                Développé en 3 jours, je l'ai crée surtout pour découvrir le bundle softdelete.
-                <a href="">Détails</a>
+                Site fait en 1 semaine, le but étant de réfléchir à l'architecture d'un projet et de découvrir le VichUploaderBundle.
+                <a href="Airbean.html#project-title">Détails</a>
             </div>
 
             <h3>Et plein d'autres projets que vous pouvez retrouver <a
@@ -68,15 +73,18 @@
         </div>
         <div>
             <h1>Chez Neofly</h1>
+            <div>Neofly est une agence web, une équipe très technique , dont les dirigeants.
+            </div>
+            <div> C'est avec cette boite où j'ai acquis le plus d'expériences. On m'a confié plusieurs projets :</div>
             <div>
-                <h3><a href="TopLook.html">Toplook</a> - site e-commerce pour grossiste <i class="fab fa-php"></i> <i
+                <h3><span  class="">Toplook</span> - site e-commerce pour grossiste <i class="fab fa-php"></i> <i
                         class="fab fa-js-square"></i>
                     <i class="fab fa-bootstrap"></i>
                 </h3>
                 <div style="margin-left:2em">J’ai contribué à développer certaines fonctionnalités au niveau du back
                     office et site client
 
-                    <div><a href="TopLook.html">détails</a></div>
+                    <div><a href="TopLook.html#project-title">détails</a></div>
                 </div>
 
                 <!--div>
@@ -85,12 +93,12 @@
                 <div-->
             </div>
             <div>
-                <h3><a target="__blanck" href="MonsieurBureau.html">MonsierBureau</a> - site e-commerce de
+                <h3><span href="MonsieurBureau.html">MonsierBureau</span> - site e-commerce de
                     commodes <i class="fab fa-php"></i> <i class="fab fa-js-square"></i>
                     <i class="fab fa-bootstrap"></i>
                 </h3>
                 <div style="margin-left:2em">J'ai contribué à développer la gestion de devis
-                    <div><a href="MonsieurBureau.html">détails</a></div>
+                    <div><a href="MonsieurBureau.html#project-title">détails</a></div>
                 </div>
                 <!--div>
                     <img style="width: auto; height:189px;border: solid;" src="images/monsieurbureau2.PNG" />
