--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1>Projets Persos</h1>
             <div>J'aime beaucoup apprendre, et créer des sites. Tous les jours  je passe du temps
                 à coder, à suivre des cours udemy, à tester des bundles. Voici quelques projets que j'ai
-                crée.
+                crées.
 
             </div>
             <div>
@@ -50,7 +50,7 @@
                         class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i class="fab fa-bootstrap"></i>
                 </h3>
                 <div style="margin-left:2em">
-                    Site e-commerce rassemblant mes conaissances sur Symfony en utilisants différents bundles.
+                    Site e-commerce rassemblant mes connaissances sur Symfony en utilisants différents bundles.
                     <a href="Anna.html#project-title">Détails</a>
                 </div>
             </div>
@@ -73,7 +73,7 @@
         </div>
         <div>
             <h1>Chez Neofly</h1>
-            <div>Neofly est une agence web, une équipe très technique , dont les dirigeants.
+            <div>Neofly est une agence web, une équipe très technique . Les dirigeants sont eux-mêmes des ingénieurs
             </div>
             <div> C'est avec cette boite où j'ai acquis le plus d'expériences. On m'a confié plusieurs projets :</div>
             <div>
