--- a/Anna.html
+++ b/Anna.html
@@ -49,6 +49,7 @@
         </div>
         <div class="some-margin-top-space">
             Site e-commerce rassemblant mes conaissances sur Symfony en utilisants différents bundles.
+            Je suis actuellement dessus pour faire une version API-REST qui va envoyer sur un site REACT.
         </div>
         
 
