--- a/about.html
+++ b/about.html
@@ -40,19 +40,45 @@
     <main>
         <h1>A propos de moi</h1>
 
+
+
+
+
+
+
+
+
         <div>
-            <div style="margin-bottom:5px">Je suis Pascal, 3 ans d'expériences dans le <b>dévelopmement web</b>
+            <div style="margin-bottom:5px">
+                Je suis Pascal, 2 ans d'expériences dans le développement web , particulièrement avec les technologies
+                PHP, MYSQL et Javascript.
             </div>
-            <div style="margin-bottom:5px">J'aime créer des fonctionnalités qui peut aider des personnes.
-                J'adore également confectionner des sites: en passant de l'architectecture, au développement,
-                ,jusqu'au déploiement.
+            <div style="margin-bottom:10px"> Passionné par la programmation. Je crée de temps en temps des sites web
+                pour
+                mon compte. En effet, J'aime
+                réfléchir à l'architecture du projet ,développer des fonctionnalités et être capable de résoudre les
+                problèmes.
             </div>
-            <div>De temps en temps je crée des projets de mon côté, <b>par passion</b>. Vous pouvez les retrouver
-                sur mon <a target="__blanck" href="https://github.com/pascalyu/">github.</a>
+            <div style="margin-bottom:10px"> J'utilise mon temps libre pour me former. Particulièrement sur Symfony, où
+                j'ai expérimentés ses
+                différents
+                Bundles. J'ai plusieurs projets que vous pouvez retrouver sur mon GitHub.
             </div>
-            <div>N'hesitez à me contacter par <a class="contact_link" target="__blanck"
-                    href="mailto:pascalyut@gmail.Com">mail</a> ou bien en passant via mon <a target="__blanck"
-                    href="https://linkedin.com/in/pascal-yu-1b904215a">linkedin</a>
+
+
+            <div style="margin-bottom:10px"> Je suis actuellement à la recherche de projet Symfony. Si vous me
+                choisissez, je vous apporterais non
+                seulement
+                mon expertise web, mais aussi ma passion pour le domaine de la programmation.</div>
+            <div> Technologies maîtrisées</div>
+            <div style="margin-bottom:10px">
+                <ul>
+                    <li>Front-End: HTML5 / CSS3, BOOTSTRAP ,JavaScript</li>
+                    <li>Back-End: Symfony 4/5 , PHP ,JavaScript</li>
+                    <li>Bases de données: MySQL, SQLite</li>
+                </ul>
+            </div>
+            <div style="margin-bottom:10px"> Au plaisir d'échanger avec vous sur vos besoins.
             </div>
         </div>
     </main>
