--- a/about.html
+++ b/about.html
@@ -40,36 +40,19 @@
     <main>
         <h1>A propos de moi</h1>
 
-
-
-
-
-
-
-
-
         <div>
             <div style="margin-bottom:5px">
-                Je suis Pascal, 2 ans d'expériences dans le développement web , particulièrement avec les technologies
-                PHP, MYSQL et Javascript.
+
+                Je suis Pascal, plus de 2 ans d'expérience dans le développement web,
+                particulièrement avec les technologies PHP, MYSQL et Javascript.
             </div>
-            <div style="margin-bottom:10px"> Passionné par la programmation. Je crée de temps en temps des sites web
-                pour
-                mon compte. En effet, J'aime
-                réfléchir à l'architecture du projet ,développer des fonctionnalités et être capable de résoudre les
-                problèmes.
+            <div style="margin-bottom:10px"> Passionné par la programmation, je crée  des sites web pour mon compte. En effet, J'aime réfléchir à l'architecture du projet ,développer des fonctionnalités et être capable de résoudre les problèmes.
             </div>
-            <div style="margin-bottom:10px"> J'utilise mon temps libre pour me former. Particulièrement sur Symfony, où
-                j'ai expérimentés ses
-                différents
-                Bundles. J'ai plusieurs projets que vous pouvez retrouver sur mon GitHub.
+            <div style="margin-bottom:10px"> J'utilise mon temps libre pour me former. Particulièrement sur Symfony, où j'ai expérimenté ses différents Bundles. J'ai plusieurs projets que vous pouvez retrouver sur mon GitHub. 
             </div>
 
 
-            <div style="margin-bottom:10px"> Je suis actuellement à la recherche de projet Symfony. Si vous me
-                choisissez, je vous apporterais non
-                seulement
-                mon expertise web, mais aussi ma passion pour le domaine de la programmation.</div>
+            <div style="margin-bottom:10px"> JeJe suis actuellement à la recherche de projet Symfony. Si vous me choisissez,  je vous apporterai non seulement mon expertise web, mais aussi ma passion pour la programmation.</div>
             <div> Technologies maîtrisées</div>
             <div style="margin-bottom:10px">
                 <ul>
