rajout blog info

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                 crées.
 
             </div>
+
+            <div>
+                <h3><span href="https://peaceful-escarpment-65444.herokuapp.com/">Blog</span> - site type blog <i
+                        class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i class="fab fa-bootstrap"></i>
+                </h3>
+                <div style="margin-left:2em">
+                    Blog App, développé en Symfony / React , en utilisant le système d'API
+                    <a href="Blog.html#project-title">Détails</a>
+                </div>
+            </div>
             <div>
                 <h3><span href="https://wnaythzwvq-bemh5cfa4d2bc.eu.s5y.io/">Anna</span> - site e-commerce <i
                         class="fab fa-symfony"></i> <i class="fab fa-js-square"></i> <i class="fab fa-bootstrap"></i>
